Fixed elements alignment on mobile view

--- a/src/css/scss_custom.scss
+++ b/src/css/scss_custom.scss
@@ -108,3 +108,9 @@ $utilities: (
     }
   }
 }
+
+.portfolio {
+  .magna_cum_laude {
+    color: green;
+  }
+}
